Fix overflow issue on both account pages when viewing on mobile

--- a/app/static/account-history.css
+++ b/app/static/account-history.css
@@ -134,7 +134,6 @@
 .btn-default3:hover {background: var(--color-lighter);}
 /* BLOCK 1 */
 #block1 {
-	height: 100px;
 	width: 100%;
 	color: var(--color-block1);
 	font-size: var(--font-block1);
@@ -143,6 +142,7 @@
 	height: 100%;
 	margin: 0 auto;
 	padding-bottom: 20px;
+	overflow-x: hidden;
 	width: 1000px;
 }
 #block1 h2 {padding-top: 12px; padding-bottom: 0px;}
